fixed blurred Selected item

--- a/Modern Dark Mode.css
+++ b/Modern Dark Mode.css
@@ -36,7 +36,7 @@
 	.rem-text.rem-header--3 {
 		color: #DFDFD5;
 	}
-
+	
 	.LinkNode {
 		color: var(--link-node-color-dark) !important;
 	}
@@ -144,6 +144,7 @@
 	.highlight-color--purple {
 		color: black;
 		border-radius: 3px;
+		margin-bottom: 1px;
 	}
 
 	.highlight-color--red {
@@ -394,14 +395,25 @@
 
 		#document-sidebar .RichTextViewer .quote {
 			margin-left: 5px !important;
-			font-family: Roboto Mono, !important;
+			font-family: "Roboto Mono", Monospace !important;
 			font-size: 14px !important;
 			border-radius: 6px !important;
 			padding: 1px !important;
 			padding-top: 		1px;
 			padding-bottom: 	1px;
 		}
-
+		
+		/* Sidebar list item focused*/
+		#document-sidebar .bg-primary-5 .RichTextViewer {
+			color: white !important;
+		}
+		
+		#document-sidebar .rounded-md.text-primary-70 {
+			background-color: transparent !important;
+			border: 2px solid yellow !important;
+		}
+		
+		/* Sidebar list item icon */
 		.document-list-item__folder-icon {
 			color: #C7C7C7;
 		}
@@ -409,12 +421,8 @@
 		#document-sidebar .float-right {
 			color: yellow;
 		}
-
-		#document-sidebar .rounded-md.text-primary-70 {
-			background-color: transparent !important;
-			border: 2px solid yellow !important;
-		}
-
+		
+		/* Sidebar list with no child */
 		.flex-grow.nowrap-RichTextViewer:only-child {
 			margin-left: 25px;
 		}
